changed SymTab to ArrayList